--- a/src/index.html
+++ b/src/index.html
@@ -26,5 +26,29 @@
 
         <img src="./images/Group 28 (3).png" alt="">
     </header>
+
+    <!-- section main -->
+
+    <section class="flex flex-col items-center p-[25px] gap-[30px] lg:gap-0 lg:flex-row  max-w-[1200px] m-auto">
+        <div class="text-center lg:text-start flex flex-col items-center lg:items-start">
+            <p class="px-[25px] py-[15px] bg-[#FFCCCC] rounded-[30px] my-[20px] font-bold">Free delivery worldwide</p>
+            <h1 class="text-[40px] lg:text-[80px] font-bold leading-[50px] lg:leading-[97px]">Foundation <br>  Matte & <br>
+                Poreless</h1>
+
+            <p class="text-[#797979] text-[20px] font-[500] leading-[30px] my-[16px]">Maybellin’s #1 foundation perfect
+                    for oily skin.no stickiness,no shine.</p>
+                    <div class="flex justify-center items-center gap-3">
+                        <button class="px-[30px] py-[15px] bg-[#B91122] rounded-lg text-white text-[20px] ">Add to cart</button>
+                        <img src="./images/play.svg" alt="">
+                        <p class="text-[#797979] text-[18px]">How it work</p>
+                    </div>
+        </div>
+
+        <div class="right flex flex-col-reverse lg:flex-row gap-4 items-center">
+            <img class="" src="./images/img_main1.svg" alt="">
+            <img class="" src="./images/img_main2.svg" alt="">
+        </div>
+    </section>
+
 </body>
 </html>
