--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="output.css">
+    <link rel="stylesheet" href="output.css" />
 </head>
+
 <body>
     <header class="flex items-center justify-between p-[25px] pt-[40px] max-w-[1200px] m-auto">
-        <img src="./images/Sunny.svg" alt="">
-        
+        <img src="./images/Sunny.svg" alt="" />
+
         <nav class="hidden lg:flex gap-[54px] text-[18px] leading-[24px] font-[500]">
             <p>Home</p>
             <p>About us</p>
@@ -17,38 +19,57 @@
             <p>Faqs</p>
             <p>Contact us</p>
         </nav>
-        
-        <div class="hidden lg:flex gap-[40px] ">
-            <img src="./images/search-normal.svg" alt="">
-            <img src="./images/delete.svg" alt="">
-            <img src="./images/user.svg" alt="">
+
+        <div class="hidden lg:flex gap-[40px]">
+            <img src="./images/search-normal.svg" alt="" />
+            <img src="./images/delete.svg" alt="" />
+            <img src="./images/user.svg" alt="" />
         </div>
 
-        <img src="./images/Group 28 (3).png" alt="">
+        <img src="./images/Group 28 (3).png" alt="" />
     </header>
 
     <!-- section main -->
 
-    <section class="flex flex-col items-center p-[25px] gap-[30px] lg:gap-0 lg:flex-row  max-w-[1200px] m-auto">
+    <section class="flex flex-col items-center p-[25px] gap-[30px] lg:gap-0 lg:flex-row max-w-[1200px] m-auto">
         <div class="text-center lg:text-start flex flex-col items-center lg:items-start">
-            <p class="px-[25px] py-[15px] bg-[#FFCCCC] rounded-[30px] my-[20px] font-bold">Free delivery worldwide</p>
-            <h1 class="text-[40px] lg:text-[80px] font-bold leading-[50px] lg:leading-[97px]">Foundation <br>  Matte & <br>
-                Poreless</h1>
+            <p class="px-[25px] py-[15px] bg-[#FFCCCC] rounded-[30px] my-[20px] font-bold">
+                Free delivery worldwide
+            </p>
+            <h1 class="text-[40px] lg:text-[80px] font-bold leading-[50px] lg:leading-[97px]">
+                Foundation <br />
+                Matte & <br />
+                Poreless
+            </h1>
 
-            <p class="text-[#797979] text-[20px] font-[500] leading-[30px] my-[16px]">Maybellin’s #1 foundation perfect
-                    for oily skin.no stickiness,no shine.</p>
-                    <div class="flex justify-center items-center gap-3">
-                        <button class="px-[30px] py-[15px] bg-[#B91122] rounded-lg text-white text-[20px] ">Add to cart</button>
-                        <img src="./images/play.svg" alt="">
-                        <p class="text-[#797979] text-[18px]">How it work</p>
-                    </div>
+            <p class="text-[#797979] text-[20px] font-[500] leading-[30px] my-[16px]">
+                Maybellin’s #1 foundation perfect for oily skin.no stickiness,no
+                shine.
+            </p>
+            <div class="flex justify-center items-center gap-3">
+                <button class="px-[30px] py-[15px] bg-[#B91122] rounded-lg text-white text-[20px]">
+                    Add to cart
+                </button>
+                <img src="./images/play.svg" alt="" />
+                <p class="text-[#797979] text-[18px]">How it work</p>
+            </div>
         </div>
 
-        <div class="right flex flex-col-reverse lg:flex-row gap-4 items-center">
-            <img class="" src="./images/img_main1.svg" alt="">
-            <img class="" src="./images/img_main2.svg" alt="">
+        <div class="right flex flex-col-reverse lg:flex-row lg:w-[100%] gap-4 items-center">
+            <img class="" src="./images/img_main1.svg" alt="" />
+            <img class="" src="./images/img_main2.svg" alt="" />
         </div>
     </section>
 
+    <!--  -->
+    <section class="max-w-[1200px] m-auto text-center w-[60%] lg:my-[70px]">
+        <h2 class="text-[30px] font-bold leading-[30px] lg:text-[50px] lg:leading-[58px] text-[#171717]">Best cosmetic products</h2>
+        <p class="text-[#797979] text-[20px] py-5">
+            Lorem ipsum dolor sit amet consectetur. Rhoncus cursus velit commodo
+            odio. Scelerisque cursus facilisi aliquet eu. Nisi sed ac praesent
+            ridiculus nibh massa aliquam nulla eget.
+        </p>
+    </section>
 </body>
+
 </html>
