change section 4 finish section 5

--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,8 @@
 
 
     <!-- Gos-primer plus 0 ML -->
-    <section class="flex flex-col items-center p-[25px] gap-[30px] justify-between w-[70%] lg:flex-row max-w-[900px] m-auto">
+    <section
+        class="flex flex-col items-center p-[25px] gap-[30px] justify-between w-[70%] lg:flex-row max-w-[900px] m-auto">
         <img src="./images/1img.svg" alt="">
         <div class="text-center lg:text-start lg:w-[50%]">
             <h3 class="text-[30px] font-bold leading-[30px] lg:text-[50px] lg:leading-[58px] py-[20px]">Gos-primer plus
@@ -128,16 +129,59 @@
     <section class="flex flex-col items-center p-[25px] justify-between lg:flex-row max-w-[1200px] m-auto">
         <img src="./images/photo_2025-01-25_17-20-38.jpg" alt="">
         <div class="p-[20px]">
-            <h4 class="text-center lg:text-start font-bold text-[30px] leading-[34px] text-[#171717] py-5">Apply & Ingredients</h4>
-            <p class="text-[#797979] text-[20px] leading-[28px]">Lorem ipsum dolor sit amet consectetur. Rhoncus cursus velit commodo odio. Scelerisque cursus facilisi
+            <h4 class="text-center lg:text-start font-bold text-[30px] leading-[34px] text-[#171717] py-5">Apply &
+                Ingredients</h4>
+            <p class="text-[#797979] text-[20px] leading-[28px]">Lorem ipsum dolor sit amet consectetur. Rhoncus cursus
+                velit commodo odio. Scelerisque cursus facilisi
                 aliquet eu. Nisi sed ac praesent ridiculus nibh massa aliquam nulla eget. <br> <br>
                 Lorem ipsum dolor sit
                 amet consectetur. Rhoncus cursus velit commodo odio. Scelerisque cursus facilisi aliquet eu. Nisi sed ac
                 praesent ridiculus nibh massa aliquam nulla eget. </p>
 
 
+            <div class="flex gap-[15px] items-center pt-6">
+                <img src="./images/strelka_right.svg" alt="">
+                <p class="text-[#DA4B5A] text-[18px] leading-[27px] font-[500]">Learn more</p>
+            </div>
+
         </div>
     </section>
+
+
+    <!-- logos -->
+    <section class="max-w-[1200px] m-auto p-[25px] hidden lg:flex justify-center">
+        <img src="./images/logos.svg" alt="">
+    </section>
+
+
+
+    <!-- Quick and best results. you are the best! -->
+    <section class="flex flex-col items-center p-[25px] justify-between lg:flex-row max-w-[1200px] m-auto">
+        <img src="./images/girl.jpg" alt="">
+
+        <div class="lg:w-[40%] m-auto p-[15px] flex flex-col items-center text-center lg:items-start lg:text-center">
+            <p class="text-[#B91122] leading-[20px]">Customer story</p>
+            <h4 class="text-center lg:text-start font-bold text-[30px] leading-[34px] text-[#171717] py-5">Quick and
+                best results.
+                you are the best!</h4>
+
+            <p class="text-[#797979] leading-[30px] py-[12px]">“Lorem ipsum dolor sit amet consectetur. Rhoncus cursus
+                velit commodo odio. Scelerisque cursus facilisi aliquet eu. Nisi sed ac praesent ridiculus nibh massa
+                aliquam nulla eget. “</p>
+            <div class="hidden lg:block">
+                <p class="font-bold">Dragos gontariu</p>
+                <p class="text-[#797979] py-[6px]">Mareting manager</p>
+                <img src="./images/fulstop.svg" alt="">
+            </div>
+
+        </div>
+    </section>
+
+
+
+
+
+
 
 </body>
 
