--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,46 @@
         </div>
     </section>
 
+    <!-- Frequently ask questions -->
 
+    <section class="max-w-[1200px] m-auto  p-[25px]">
+        <h3  class="text-center lg:text-start font-bold text-[30px] leading-[34px] text-[#171717] py-5">Frequently ask questions</h3>
+        <div class="flex flex-col items-center justify-between lg:flex-row">
+            <div class="left w-[80%] lg:w-[45%]">
+                <div class="flex items-start gap-[10px] pl-[20px] pr-[70px] py-[15px] border-[1px] rounded-[50px] border-[#ECECEC]">
+                    <img src="./images/Line 2.svg" alt="">
+                    <div>
+                        <h5>How long until we deliver your product</h5>
+                        <p>“Lorem ipsum dolor sit amet consectetur. Rhoncus cursus velit commodo odio. Scelerisque cursus facilisi aliquet eu. Nisi sed ac praesent ridiculus nibh massa aliquam nulla eget. <br><br></p>
+
+                    </div>
+                </div>
+
+
+                <div class="flex items-center gap-[17px] pl-[20px] pr-[70px] py-[15px] border-[1px] rounded-[50px] border-[#ECECEC] ">
+                    <p class="text-[40px]">+</p>
+                    <p>How long until we deliver your product</p>
+                </div>
+            </div>
+
+            <div class="right w-[80%] lg:w-[45%]">
+                <div class="flex items-center gap-[17px] pl-[20px] pr-[70px] py-[15px] border-[1px] rounded-[50px] border-[#ECECEC] ">
+                    <p class="text-[40px]">+</p>
+                    <p>How long until we deliver your product</p>
+                </div>
+
+                <div class="flex items-center gap-[17px] pl-[20px] pr-[70px] py-[15px] border-[1px] rounded-[50px] border-[#ECECEC] ">
+                    <p class="text-[40px]">+</p>
+                    <p>How long until we deliver your product</p>
+                </div>
+
+                <div class="flex items-center gap-[17px] pl-[20px] pr-[70px] py-[15px] border-[1px] rounded-[50px] border-[#ECECEC] ">
+                    <p class="text-[40px]">+</p>
+                    <p>How long until we deliver your product</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
